--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -41,11 +41,18 @@ pre {
 }
 
 .social-links {
-    margin-top: 10px;
+    margin-top: 10px; 
     display: flex;
 }
 
 .social-link {
     margin-right: 10px;
+}
+.entry-content {
+    max-width: 800px;
+}
+
+article {
+    max-width: 800px !important;
 }
 
