--- a/theme/basic/templates/article.html
+++ b/theme/basic/templates/article.html
@@ -64,6 +64,9 @@
     </div>
     {% endif %}
   </footer><!-- /.post-info -->
+  <div class="image">
+    <img src="{{article.image}}">
+  </div>
   <div class="entry-content">
     {{ article.content }}
   </div><!-- /.entry-content -->
