--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -1,23 +1,15 @@
 body {
   font-family: monospace;
-  font-size: 100%;
-  background-color: white;
-  color: #111;
-  width: 80%;
-  min-height: 200px;
-  padding: 1em;
-  margin: 5% auto;
-  border-radius: 5px;
+  font-size: 18px;
+  background-color: #0d1117;
+  color: #fff;
   display: block;
+  margin: 0px;
 }
 
-#sitename {
-    margin-bottom: 0px !important;
-}
-
-a:link    { color: blue; text-decoration: none;      }
-a:hover   { color: blue; text-decoration: underline; }
-a:visited { color: blue;                             }
+a:link    { color: #58a6ff; text-decoration: none;      }
+a:hover   { color: #58a6ff; text-decoration: underline; }
+a:visited { color: #58a6ff;                             }
 
 h1 a { color: inherit !important }
 h2 a { color: inherit !important }
@@ -26,13 +18,50 @@ h4 a { color: inherit !important }
 h5 a { color: inherit !important }
 h6 a { color: inherit !important }
 
+#banner {
+    border-bottom: 1px solid #21262d;
+    padding: 10px;
+}
+#banner #title {
+    max-width: 900px;
+    margin: auto;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+#subtitle {
+    max-width: 900px;
+    margin: auto;
+    padding: 0px;
+    font-size: 14px;
+}
+#categories {
+    margin-left: auto;
+}
+h1 {
+    margin: 0px;
+}
 #menu li {
     display: inline;
 }
 
+#content {
+    margin-top: 10px;
+    max-width: 900px;
+    margin: auto;
+    padding: 10px;
+}
 #post-list {
     margin-bottom: 1em;
     margin-top: 1em;
+    list-style-type: none;
+    padding: 0px;
+    padding-bottom: 10px;
+
+}
+#post-list li:not(:last-child) {
+    border-bottom: 1px solid #21262d
 }
 
 pre {
@@ -48,11 +77,18 @@ pre {
 .social-link {
     margin-right: 10px;
 }
-.entry-content {
-    max-width: 800px;
+.entry-content blockquote {
+    margin: 0px;
 }
 
-article {
-    max-width: 800px !important;
+#contentinfo {
+    max-width: 900px;
+    margin: auto;
+    padding: 10px
 }
 
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: 30px;
+    }
+  }
