--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -51,6 +51,7 @@ h1 {
     max-width: 900px;
     margin: auto;
     padding: 10px;
+    line-height: 1.7;
 }
 #post-list {
     margin-bottom: 1em;
