--- a/theme/basic/templates/base.html
+++ b/theme/basic/templates/base.html
@@ -44,6 +44,7 @@
                 <h1 id="sitename"><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>
                 {% if DISPLAY_CATEGORIES_ON_MENU %}
                   <select name="categories" id="categories">
+                    <option value="all">all</option>
                     {% for cat, null in categories %}
                       <option value="{{ cat }}">{{ cat }}</option>
                     {% endfor %}
