--- a/theme/basic/templates/index.html
+++ b/theme/basic/templates/index.html
@@ -11,13 +11,17 @@
                 <footer class="post-info">
                     <time class="published" datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }} </time><br>
                     <span>{{ article.read}} read</span>
+                    <!--
                     <address class="vcard author">By
                     {% for author in article.authors %}
                         <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
                     {% endfor %}
                     </address>
+                    -->
                 </footer><!-- /.post-info -->
-                <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
+                <div class="entry-content"> {{ article.summary }} 
+                <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">read more ></a>
+                </div><!-- /.entry-content -->
         </article></li>
 {% endfor %}
 </ol><!-- /#posts-list -->
