--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -1,6 +1,5 @@
 body {
   font-family: monospace;
-  font-size: 18px;
   background-color: #0d1117;
   color: #fff;
   display: block;
@@ -78,6 +77,9 @@ pre {
 .social-link {
     margin-right: 10px;
 }
+.entry-content {
+    font-size: 16px;
+}
 .entry-content blockquote {
     margin: 0px;
 }
@@ -92,4 +94,4 @@ pre {
     h1 {
         font-size: 30px;
     }
-  }
+}
