--- a/theme/basic/templates/index.html
+++ b/theme/basic/templates/index.html
@@ -22,7 +22,8 @@
                 <div class="entry-content"> {{ article.summary }} 
                 <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">read more ></a>
                 </div><!-- /.entry-content -->
-        </article></li>
+        </article>
+        </li>
 {% endfor %}
 </ol><!-- /#posts-list -->
 {% if articles_page.has_other_pages() %}
