--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: monospace;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #0d1117;
   color: #fff;
   display: block;
@@ -81,7 +81,12 @@ pre {
     font-size: 16px;
 }
 .entry-content blockquote {
-    margin: 0px;
+    font: italic;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    padding-left: 15px;
+    border-left: 3px solid #ccc;
 }
 
 #contentinfo {
