--- a/theme/basic/templates/base.html
+++ b/theme/basic/templates/base.html
@@ -69,9 +69,9 @@
         <div>
           <a href="{{ SITEURL }}/">Blog</a>
         </div>
-        <div>
-          <a href="{{ SITEURL }}/blog">Projects</a>
-        </div>
+        <!-- <div>
+          <a href="{{ SITEURL }}/projects">Projects</a>
+        </div> -->
         <!-- <div>
           <a href="{{ SITEURL }}/paintings">Paintings</a>
         </div> -->
@@ -95,9 +95,9 @@
           <div>
             <a href="{{ SITEURL }}/">Blog</a>
           </div>
-          <div>
-            <a href="{{ SITEURL }}/blog">Projects</a>
-          </div>
+          <!-- <div>
+            <a href="{{ SITEURL }}/projects">Projects</a>
+          </div> -->
           <div>
             <a href="{{ SITEURL }}/about">About</a>
           </div>
