--- a/theme/basic/templates/article.html
+++ b/theme/basic/templates/article.html
@@ -1,61 +1,49 @@
 {% extends "base.html" %}
 {% block html_lang %}{{ article.lang }}{% endblock %}
 
-{% block title %}{{ SITENAME }} - {{ article.title|striptags  }}{% endblock %}
+{% block title %}{{ SITENAME }} - {{ article.title|striptags }}{% endblock %}
 
 {% block head %}
-  {{ super() }}
+{{ super() }}
 
-  {% import 'translations.html' as translations with context %}
-  {% if translations.entry_hreflang(article) %}
-    {{ translations.entry_hreflang(article) }}
-  {% endif %}
+{% import 'translations.html' as translations with context %}
+{% if translations.entry_hreflang(article) %}
+{{ translations.entry_hreflang(article) }}
+{% endif %}
 
-  {% if article.description %}
-    <meta name="description" content="{{article.description}}" />
-  {% endif %}
+{% if article.description %}
+<meta name="description" content="{{article.description}}" />
+{% endif %}
 
-  {% for tag in article.tags %}
-    <meta name="tags" content="{{tag}}" />
-  {% endfor %}
+{% for tag in article.tags %}
+<meta name="tags" content="{{tag}}" />
+{% endfor %}
 
 {% endblock %}
 
 {% block content %}
 <section id="content" class="body">
   <header>
- {% import 'translations.html' as translations with context %}
- {{ translations.translations_for(article) }}
+    {% import 'translations.html' as translations with context %}
+    {{ translations.translations_for(article) }}
   </header>
   <div class="entry">
     <div class="entry-content">
       {{ article.content }}
     </div>
-    <ul class="entry-meta">
-      <li style="display: flex;">
-        <div style="font-weight: bold;">
-          Read:
-        </div>
-        <div style="margin-left: auto;">
-          {{ article.read }}
-        </div>
-      </li>
-      <li style="display: flex;">
-        <div style="font-weight: bold;">
-          Date:
-        </div>
-        <div style="margin-left: auto;">
-          {{ article.date.strftime('%d %B %Y') }}
-        </div>
-      </li>
-      <li style="display: flex;">
-        <div style="font-weight: bold;">
-          Category:
-        </div>
-        <div style="margin-left: auto;">
-          <a href="{{ SITEURL }}/category/{{ article.category }}">{{ article.category }}</a>
-        </div>
-      </li>
+    <div class="related">
+      <div style="font-weight: bold;">
+        Related Posts
+      </div>
+      {% if article.related_posts %}
+      <ul class="related-posts">
+        {% for related_post in article.related_posts %}
+        <li><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p style="font-style: italic;">No related posts</p>
+      {% endif %}
     </div>
   </div>
 </section>
