--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -213,9 +213,10 @@ img {
 
 #mobile-nav-options {
     position: absolute;
-    top: 50px;
+    top: 10px;
     left: 0;
     width: 100%;
+    height: 100%;
     background-color: #fff;
     border-bottom: 1px solid #c1c1c1;
 }
