--- a/theme/basic/templates/base.html
+++ b/theme/basic/templates/base.html
@@ -92,6 +92,14 @@
           </svg>          
         </div>
         <div id="mobile-nav-options" style="display: none;">
+          <div style="display: flex; align-items: center; padding: 0 10px 0 0">
+            <h1 id="sitename"><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>
+            <div style="margin-left: auto;">
+              <svg style="margin-left: auto; cursor: pointer;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+              </svg>
+            </div>
+          </div>
           <div>
             <a href="{{ SITEURL }}/">Blog</a>
           </div>
