--- a/theme/basic/static/css/main.css
+++ b/theme/basic/static/css/main.css
@@ -217,6 +217,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     background-color: #fff;
     border-bottom: 1px solid #c1c1c1;
 }
